--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
   },
   "homepage": "https://github.com/hostcdd/blog#readme",
   "devDependencies": {
-    "express": "^4.15.3"
+    "body-parser": "^1.17.2",
+    "cookies": "^0.7.0",
+    "express": "^4.15.3",
+    "markdown": "^0.5.0",
+    "mongoose": "^4.10.5",
+    "supervisor": "^0.12.0",
+    "swig": "^1.4.2"
   }
 }
